# PersonalAIAssistant

./: .env.example  .gitignore  README.md  alembic.ini  check_celery_errors.py  docker-compose.yml  parse_test.py  pyproject.toml  test_db.py  test_error.py  test_fix.py  test_fix2.py  test_search.py
alembic/: env.py
alembic/versions/: 0002_add_file_status.py  0003_add_chunk_source.py  001_initial.py  0166ad5eb5c8_add_email_and_password_to_user.py
app/: config.py  dependencies.py  main.py
app/api/: ask.py  auth.py  files.py  jobs.py  router.py  search.py  upload.py
app/db/: session.py
app/models/: database.py  schemas.py
app/services/: cache.py  chunking.py  embedding.py  image_processing.py  query_parser.py  rag.py  storage.py  text_extraction.py  vector_store.py
app/utils/: hashing.py
app/workers/: celery_app.py  tasks.py
frontend/: app.js  env.js  index.html  style.css
tests/: conftest.py  test_api.py  test_chunking.py  test_embedding.py  test_pdf_ingestion.py  test_query_parser.py
